examples/errors/invalid-space-indents.tw
# Indentation requires to use same number of spaces
# indent 3
   # indent 2
     # indent
